# backgroundmnu

./: LICENSE.txt  README.md  background_example.ipynb  cobaya_example.ipynb  example.ipynb  pyproject.toml
backgroundmnu/: Background.py  BackgroundLikelihood.py  BackgroundTheory.py  __init__.py  constants.py
backgroundmnu/data/: Alens_plikHM_TTTEEE_lowl_lowE.pkl  P-ACT_Alens.pkl  hlpTTTEEE_lowT_lolE.pkl  reduced_2p_likelihood_ACT.pkl  reduced_2p_likelihood_PR4.pkl  reduced_2p_likelihood_lcdm.pkl  reduced_2p_likelihood_lcdm_Alens.pkl  reduced_3p_likelihood_ACT.pkl  reduced_3p_likelihood_W-ACT.pkl  reduced_3p_likelihood_dcdm.pkl  reduced_3p_likelihood_lcdm.pkl
